added different images sizes

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     --text-color: #333;
     --background-color: #f4f4f4; /* Fallback if wide-gamut is not supported */
     --link-color: #0645ad;
-    /* --link-hover-color: #0b0080; */ */
 }
 
 /* CSS Reset */
@@ -235,43 +234,43 @@ form {
     background: #fff;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
+}
   
-  fieldset {
+fieldset {
     margin-bottom: 20px;
     padding: 20px;
     border-radius: 8px;
     border: 1px solid #ddd;
-  }
+}
   
-  legend {
+legend {
     padding: 0 5px;
     font-size: 1.1rem;
     font-weight: bold;
-  }
+}
   
-  label {
+label {
     display: block;
     margin-bottom: 5px;
     font-size: 1rem;
-  }
+}
   
-  input[type="text"],
-  input[type="email"],
-  input[type="tel"],
-  textarea {
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
     width: calc(100% - 20px);
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
     border-radius: 4px;
-  }
+}
   
-  textarea {
+textarea {
     resize: vertical;
-  }
+}
   
-  button[type="submit"] {
+button[type="submit"] {
     padding: 10px 20px;
     color: white;
     background-color: var(--primary-color);
@@ -279,30 +278,25 @@ form {
     border-radius: 4px;
     cursor: pointer;
     font-size: 1rem;
-    transition: background-color 0.3s ease;
-  }
+    /* transition: background-color 0.3s ease; */
+}
   
-  button[type="submit"]:hover {
-    background-color: color-mix(in srgb, var(--primary-color) 70%, white 30%);
-  }
-  
-  details summary {
+details summary {
     cursor: pointer;
     padding: 5px;
     margin-bottom: 10px;
-  }
+}
   
-  /* Adjustments to existing elements */
-  input[type="checkbox"] + label {
+input[type="checkbox"] + label {
     display: inline-block;
     margin-left: 5px;
-  }
+}
   
-  @media (max-width: 768px) {
+@media (max-width: 768px) {
     input[type="text"],
     input[type="email"],
     input[type="tel"],
     textarea {
-      width: calc(100% - 10px); /* Smaller screens will have less padding */
+        width: calc(100% - 10px); /* Smaller screens will have less padding */
     }
-  }
+}
