--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
     --primary-color: color(display-p3 0.1804 0.8000 0.4431); /* wide-gamut color */ 
     --text-color: #333;
-    --background-color: #f4f4f4; /* Fallback if wide-gamut is not supported */
-    --link-color: #0645ad;
+    --background-color: #f4f4f4;
+    --background-hover-color: color-mix(in srgb, black 60%, white 40%);
 }
 
 /* CSS Reset */
@@ -15,9 +15,8 @@
 body {
     font-family: 'Open Sans', sans-serif; /*Custom font with fallback */
     margin: 0;
-    /* padding: 20px; */
-    background-color: var(--background-color);
-    color: var(--text-color, black); /* Fallback */
+    background-color: var(--background-color, white);
+    color: var(--text-color, black);
 }
 
 @font-face {
@@ -28,9 +27,8 @@ body {
 }
 
 header {
-    /* display: flex; */
     justify-content: space-between;
-    background-color: var(--primary-color);
+    background-color: var(--primary-color, green);
     color: #fff;
     text-align: center;
     align-items: center;
@@ -67,8 +65,7 @@ nav ul li a {
 }
   
 nav ul li a:hover {
-    color: var(--link-hover-color);
-    background-color: #666;
+    background-color: var(--background-hover-color, #666);
 }
   
 main {
@@ -167,7 +164,7 @@ section:hover {
         display: block;
         width: 100%;
         padding: 15px 0;
-        border-bottom: 1px solid #ddd; /* Add a border or any other styles for the menu items */
+        border-bottom: 1px solid #ddd;
     }
 }
   
@@ -186,16 +183,16 @@ section {
 }
   
 /* New Selectors */
-section:has(img) {
+section:has(picture) {
     border: 1px solid blue;
-  }
+}
   
 /* Example of Scoped CSS with Nesting */
 section#about {
     --section-background: #e7f3fe;
   
     h2 {
-      color: var(--primary-color);
+      color: var(--primary-color, green);
     }
   
     p {
@@ -273,12 +270,11 @@ textarea {
 button[type="submit"] {
     padding: 10px 20px;
     color: white;
-    background-color: var(--primary-color);
+    background-color: var(--primary-color, green);
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 1rem;
-    /* transition: background-color 0.3s ease; */
 }
   
 details summary {
@@ -297,6 +293,6 @@ input[type="checkbox"] + label {
     input[type="email"],
     input[type="tel"],
     textarea {
-        width: calc(100% - 10px); /* Smaller screens will have less padding */
+        width: calc(100% - 10px);
     }
 }
